# utexas-ros-pkg

./: ProjectHome.md
ar_nav/ar_localization/: manifest.xml
assisted_navigation/ar_localization/: mainpage.dox  manifest.xml
assisted_navigation/ut_costmap_2d/: mainpage.dox
assisted_navigation/ut_move_base/: manifest.xml
ccalc/ccalc_driver/: ccalc_driver.py
ccalc/ccalc_navigation/: mainpage.dox  manifest.xml
ccalc/libccalc/: manifest.xml
config/icewm-config/: menu
glados/: stack.xml
glados/glados_apps/: CMakeLists.txt
glados/glados_person_detection/: CMakeLists.txt
glados/glados_teleop/: manifest.xml
glados/pharos_bringup/: mainpage.dox
glados/pharos_description/: test_urdf.sh
glados/pharos_navigation/: mainpage.dox
glados/teleop/: CMakeLists.txt  manifest.xml
ground_truth/: manifest.xml
ground_truth/launch/: calibrateOld.launch  detectOld.launch
patches/: erratic_gazebo_plugins.patch
pharos/: DO_NOT_USE.txt
pharos/lightswitch_app/: build.xml  manifest.xml
pharos/pharos_benchmarks/: mainpage.dox
pharos/pharos_gyro/: CMakeLists.txt  mainpage.dox
pharos/pharos_segbot/: mainpage.dox  manifest.xml
pharos/teleop_ackermann_keyboard/: manifest.xml
pharos/traxxas_node/: manifest.xml
rosdep/: apriltags.yaml
rosinstall/: experimental.rosinstall  pharos_segbot.rosinstall
scripts/: horatio-root.py  horatio.sh  set_addr.sh  setupWired.sh  switchUSB.sh
sketchup/: ens-6-desks.skp  ens-couch-formation.skp
stacks/april/: stack.xml
stacks/apriltags/: stack.xml
stacks/ar_nav/: stack.xml
stacks/austinvilla/: stack.xml
stacks/bwi/camera_person_detector/src/nodes/: CMakeLists.txt  ColorSignature.cpp  ColorSignature.h  Detector.cpp  Detector.h  PersonEKF.cpp  PersonIdentifier.cpp  PersonIdentifier.h  TransformProvider.cpp  TransformProvider.h  detector.cc  detector_main.cpp
stacks/bwi/camera_person_detector/src/nodes/ekf/: BsModel.cpp  BsModel.h  CMakeLists.txt  Ekf.h  EkfManager.cpp  EkfManager.h  EkfModel.cpp  EkfModel.h  HogModel.cpp  PersonEkf.cpp  PersonEkf.h  PersonReading.h
stacks/bwi/camera_person_detector/src/nodes/sp/: Blob.h  CMakeLists.txt  SegmentationProcessor.cpp  SegmentationProcessor.h
stacks/bwi/camera_person_detector/src/ui/: CMakeLists.txt  DetectorViewer.cpp  ImageWidget.cpp  main_window.cpp  main_window.h
(+984 files in other folders)
