add_subdirectory(sp)
add_subdirectory(ekf)
rosbuild_add_library(Identifier ColorSignature.cpp PersonIdentifier.cpp)
rosbuild_add_library(Transformer TransformProvider.cpp)
rosbuild_add_library(MultiscaleHog MultiscaleHogDetector.cpp)
rosbuild_add_library(Detector Detector.cpp)
rosbuild_add_executable(main Main.cpp)
target_link_libraries(main Detector SegmentationProcessor Identifier Transformer EKF MultiscaleHog)
